--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ a:hover{
     color: #2F1C6A;
     margin: 0 3%;
 }
-.contact-icons:hover, .marker:hover{
-    -webkit-transform: scale(1.4);
+.contact-icons:hover, .marker:hover, .go-down-btn:hover, .go-up-btn:hover{
+    -webkit-transform: scale(1.2);
 }
 .rights-p{
     text-align: center;
